--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name" translatable="false">Playlist Maker</string>
     <string name="title" translatable="false">Playlist maker</string>
     <string name="button_search_text">Поиск</string>
+    <string name="button_settings_text">Настройки</string>
+    <string name="button_library_text">Медиатека</string>
+    <string name="title_settings">Настройки</string>
 </resources>
