--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="button_settings_text">Настройки</string>
     <string name="button_library_text">Медиатека</string>
     <string name="title_settings">Настройки</string>
+    <string name="dark_theme">Темная тема</string>
+    <string name="share_app">Поделиться приложением</string>
+    <string name="write_to_support">Написать в поддержку</string>
+    <string name="user_application">Пользовательское приложение</string>
+    <string name="title_back">Назад</string>
 </resources>
