--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -4,4 +4,9 @@
     <string name="button_settings_text">Settings</string>
     <string name="button_library_text">Library</string>
     <string name="title_settings">Settings</string>
+    <string name="dark_theme">Dark theme</string>
+    <string name="share_app">Share App</string>
+    <string name="write_to_support">Write to support</string>
+    <string name="user_application">User Application</string>
+    <string name="title_back">Back</string>
 </resources>
