--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="write_to_support">Написать в поддержку</string>
     <string name="user_application">Пользовательское приложение</string>
     <string name="title_back">Назад</string>
+    <string name="title_library" translatable="false">Экран медиатеки</string>
+    <string name="title_search" translatable="false">Экран поиска</string>
 </resources>
