--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,5 @@
     <string name="share_app_message">Share app</string>
     <string name="write_to_supp_message">Thanks to the developers and developers for a cool app!</string>
     <string name="write_to_supp_theme">A message to the developers and developers of the Playlist Maker app</string>
+    <string name="button_update">Update</string>
 </resources>
