--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="write_to_supp_mailto" translatable="false">mailto:</string>
     <string name="write_to_supp_email" translatable="false">babaylov-ayu@mail.ru</string>
     <string name="terms_of_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="button_update">Обновить</string>
 </resources>
