--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,4 +16,6 @@
     <string name="button_update">Update</string>
     <string name="network_error">Communication problems \\n\\nUpload failed. Check your internet connection</string>
     <string name="nothing_found">Nothing found</string>
+    <string name="you_were_looking_for">You were looking for</string>
+    <string name="clear_the_history">Clear the history</string>
 </resources>
