--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,4 +18,9 @@
     <string name="nothing_found">Nothing found</string>
     <string name="you_were_looking_for">You were looking for</string>
     <string name="clear_the_history">Clear the history</string>
+    <string name="duration">Duration</string>
+    <string name="album">Album</string>
+    <string name="year">Year</string>
+    <string name="genre">Genre</string>
+    <string name="country">Country</string>
 </resources>
