--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,7 +14,7 @@
     <string name="write_to_supp_message">Thanks to the developers and developers for a cool app!</string>
     <string name="write_to_supp_theme">A message to the developers and developers of the Playlist Maker app</string>
     <string name="button_update">Update</string>
-    <string name="network_error">Communication problems \\n\\nUpload failed. Check your internet connection</string>
+    <string name="network_error">Communication problems\n\nUpload failed. Check your internet connection</string>
     <string name="nothing_found">Nothing found</string>
     <string name="you_were_looking_for">You were looking for</string>
     <string name="clear_the_history">Clear the history</string>
