--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,4 +24,7 @@
     <string name="genre">Genre</string>
     <string name="country">Country</string>
     <string name="audio_file_not_available">Audio file not available</string>
+    <string name="library_is_empty">Your media library is empty</string>
+    <string name="no_playlists">You haven\'t\ncreated any playlists</string>
+    <string name="new_playlist">New playlist</string>
 </resources>
