--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -27,4 +27,6 @@
     <string name="library_is_empty">Your media library is empty</string>
     <string name="no_playlists">You haven\'t\ncreated any playlists</string>
     <string name="new_playlist">New playlist</string>
+    <string name="featured_tracks">Featured tracks</string>
+    <string name="playlists">Playlists</string>
 </resources>
