--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,4 +29,6 @@
     <string name="new_playlist">New playlist</string>
     <string name="featured_tracks">Featured tracks</string>
     <string name="playlists">Playlists</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
 </resources>
