--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="new_playlist">Новый плейлист</string>
     <string name="featured_tracks">Избранные треки</string>
     <string name="playlists">Плейлисты</string>
+    <string name="name">Название*</string>
+    <string name="description">Описание</string>
 </resources>
