--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,4 +31,5 @@
     <string name="playlists">Playlists</string>
     <string name="name">Name</string>
     <string name="description">Description</string>
+    <string name="create">Create</string>
 </resources>
