--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="playlists">Плейлисты</string>
     <string name="name">Название*</string>
     <string name="description">Описание</string>
+    <string name="create">Создать</string>
 </resources>
