--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,4 +35,8 @@
     <string name="one_track">track</string>
     <string name="more_that_one_track_1">tracks</string>
     <string name="more_that_one_track_2">tracks</string>
+    <string name="complete_playlist">Finish creating a playlist?</string>
+    <string name="lose_data">All unsaved data will be lost</string>
+    <string name="complete">Complete</string>
+    <string name="cancel">Cancel</string>
 </resources>
