--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,8 @@
     <string name="one_track">трек</string>
     <string name="more_that_one_track_1">трека</string>
     <string name="more_that_one_track_2">треков</string>
+    <string name="complete_playlist">Завершить создание плейлиста?</string>
+    <string name="lose_data">Все несохраненные данные будут потеряны</string>
+    <string name="complete">Завершить</string>
+    <string name="cancel">Отмена</string>
 </resources>
