--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,4 +40,5 @@
     <string name="complete">Complete</string>
     <string name="cancel">Cancel</string>
     <string name="add_to_playlist">Add to playlist</string>
+    <string name="playlist_is_empty">No tracks have been added\\nto the playlist yet</string>
 </resources>
