--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
 
 
     <!-- Склонения слова "Трек" -->
-    <plurals name="plurals" translatable="false">
+    <plurals name="plurals_track" translatable="false">
         <item quantity="zero">треков</item>
         <item quantity="one">трек</item>
         <item quantity="two">трека</item>
@@ -62,6 +62,18 @@
         <item quantity="many">треков</item>
         <item quantity="other">треков</item>
     </plurals>
+
+    <!-- Склонения слова "Трек" -->
+    <plurals name="plurals_min" translatable="false">
+        <item quantity="zero">минут</item>
+        <item quantity="one">минута</item>
+        <item quantity="two">минуты</item>
+        <item quantity="few">минуты</item>
+        <item quantity="many">минут</item>
+        <item quantity="other">минут</item>
+    </plurals>
+    <string name="playlist_is_empty">В плейлист еще не добавлен\nни один трек</string>
+
 </resources>
 
 
