--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
         <item quantity="other">минут</item>
     </plurals>
     <string name="playlist_is_empty">В плейлист еще не добавлен\nни один трек</string>
-    <string name="del_track">Удалить трек?</string>
+    <string name="del_track">Хотите удалить трек?</string>
     <string name="del_track_qestion">Вы уверены, что хотите удалить трек из плейлиста?</string>
     <string name="del">Удалить</string>
     <string name="share">Поделиться</string>
@@ -81,6 +81,9 @@
     <string name="del_playlist">Удалить плейлист</string>
     <string name="save">Сохранить</string>
     <string name="edit">Редактировать</string>
+    <string name="yes_caps">ДА</string>
+    <string name="no_caps">НЕТ</string>
+    <string name="del_qestion">Хотите удалить плейлист «</string>
 
 </resources>
 
